# vspreview-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: utils.rs
src/app/: eframe_app.rs  vs_previewer.rs
src/app/ui/: bottom_panel.rs  mod.rs  preview_image.rs
