[package]
name = "vspreview-rs"
version = "1.0.2"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.92.0"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "wrap_help", "deprecated"] }
eframe = { version = "0.34.1", features = ["persistence"] }
fast_image_resize = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
rgb = "0.8.53"
itertools = "0.14.0"
lcms2 = "6.1.1"
num_enum = "0.7.6"
tokio = { version = "1.52.1", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "*", default-features = false, features = ["net"] }
parking_lot = "0.12.5"
poll-promise = "0.3.0"
rfd = "0.17.2"
serde_derive = "1.0.228"
serde = "1.0.228"
vapoursynth = { version = "0.5.4" }

[[bin]]
name = "vspreview-rs"
path = "src/main.rs"

[profile.release-deploy]
inherits = "release"
lto = "thin"
strip = "symbols"
